--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,10 +158,14 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
   set(_mbelib_san_ldflags "")
   if(MBELIB_ENABLE_ASAN AND (CMAKE_C_COMPILER_ID MATCHES "Clang|GNU"))
     list(APPEND _mbelib_san_cflags -fsanitize=address -fno-omit-frame-pointer)
+    # For Clang, enable stronger detection of stack use-after-scope
+    if(CMAKE_C_COMPILER_ID MATCHES "Clang")
+      list(APPEND _mbelib_san_cflags -fsanitize-address-use-after-scope)
+    endif()
     list(APPEND _mbelib_san_ldflags -fsanitize=address)
   endif()
   if(MBELIB_ENABLE_UBSAN AND (CMAKE_C_COMPILER_ID MATCHES "Clang|GNU"))
-    list(APPEND _mbelib_san_cflags -fsanitize=undefined)
+    list(APPEND _mbelib_san_cflags -fsanitize=undefined -fno-sanitize-recover=undefined)
     list(APPEND _mbelib_san_ldflags -fsanitize=undefined)
   endif()
 
