--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,23 @@
 name: CI
 
 on:
+  workflow_dispatch: {}
   push:
-    branches: [main]
+    branches: [main, master]
+    paths-ignore:
+      - ".github/*.yml"
+      - ".github/*.yaml"
+      - ".github/**/*.yml"
+      - ".github/**/*.yaml"
+      - "**/*.md"
   pull_request:
-    branches: [main]
+    branches: [main, master]
+    paths-ignore:
+      - ".github/*.yml"
+      - ".github/*.yaml"
+      - ".github/**/*.yml"
+      - ".github/**/*.yaml"
+      - "**/*.md"
 
 jobs:
   build-test:
